# cli

./: .gitignore  Cargo.toml  flake.nix
src/: auth.rs  main.rs
