[package]
name = "befs_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
directories = { version = "5" }
thiserror = { version = "1" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "process",
] }
interprocess = { version = "1", features = ["tokio_support"] }
bfsp = { git = "https://github.com/Billy-s-E2EE-File-Server/bfsp", default-features = false, features = [
    "config",
    "auth",
    "crypto",
] }
futures = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.11", features = ["json"] }
hex = { version = "0.4" }
